--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,14 @@
-$color-light: #F2ECE2;
-$color-orange: #F0894D;
-$color-pink: #FCBEA4;
-$color-cream: #FCE6BD;
+$color-light: #ffffff;
+$color-orange: #f0894d;
+$color-pink: #fcbea4;
+$color-cream: #fce6bd;
 $color-dark: #111111;
-$color-grey: #9D9D9D;
-$color-bg: #F2ECE2;
+$color-grey: #9d9d9d;
+$color-bg: #f2ece2;
+
+$color-dark-2: #292929;
+$color-dark-3: #414141;
+$color-dark-4: #585858;
+$color-dark-5: #c7c7c779;
+
+$color-progress-bg: rgba(144, 144, 144, 0.301);
