--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -1,48 +1,188 @@
-.sidebar{
+.sidebar {
+  &__left {
+    grid-column: 1 / 2;
+    display: grid;
+    grid-template-columns: minmax(7rem, 1fr);
+    grid-template-rows: minmax(8rem, min-content) 1fr minmax(8rem, min-content);
+    justify-items: stretch;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: $color-light;
+
+    &__logos {
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-bottom: 1px solid $color-dark-5;
+    }
+
+    &__logo {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      height: 5rem;
+      width: 5.7rem;
+      justify-self: center;
+      // margin-top: auto;
+    }
+
+    &__items {
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+      list-style: none;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      // gap: 1.8rem;
+    }
+
+    &__item {
+      transition: all 0.3s ease-in-out;
+      width: 100%;
+
+      & > button {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+      }
+    }
+
+    &__item:first-child {
+      background-color: $color-bg;
+    }
+
+    &__item:hover,
+    &__item:active {
+      background-color: $color-bg;
+    }
+
+    &__icon {
+      padding: 2.5rem;
+      height: 2.5rem;
+      width: 2.5rem;
+    }
+
+    &__doubt {
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+      height: 3.5rem;
+      color: $color-light;
+      width: 3.5rem;
+      border-radius: 50%;
+      background-color: $color-dark;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: auto;
+    }
+  }
+
+  &__right {
+    grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: minmax(15rem, max-content);
+    grid-template-rows: minmax(8rem, min-content) 1fr minmax(5rem, min-content);
+    width: 100%;
+    background-color: $color-bg;
+
+    &__header {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+      width: 100%;
+      height: 100%;
+      border-bottom: 1px solid $color-dark-5;
+      align-content: center;
+      padding: 0 2.5rem;
+    }
+  }
+  &__menu-bar {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    justify-items: center;
+  }
+
+  &__menus {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 100vh;
-    align-items: center;
-    
-    &__logo-img{
-        margin-top: 1rem;
-        height: 5rem;
-        width: 5.7rem;
-    }
-    
-    &__items{
-        list-style: none;
-        
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        // gap: 1.8rem;
-    }
-    &__item{
-        transition: all .3s ease-in-out;
-    }
-    &__item:hover{
-        background-color: $color-bg;
-    }
-        
+    gap: 1.5rem;
+    // width: 100%;
+    margin: 1.5rem 2.5rem;
+  }
 
-    &__icon{
-        padding: 1.8rem;
-        height: 2.5rem;
-        width: 2.5rem;
+  &__menu {
+    list-style: none;
+
+    .toggle__input--1,
+    .toggle__input--2,
+    .toggle__input--3,
+    .toggle__input--4,
+    .toggle__input--5 {
+      display: none;
+      margin-bottom: 1.5rem;
     }
 
-
-    &__doubt{
-        height: 3.5rem;
-        color: $color-light;
-        width: 3.5rem;
-        border-radius: 50%;
-        background-color: $color-dark;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 2rem;
+    .toggle__label--1,
+    .toggle__label--2,
+    .toggle__label--3,
+    .toggle__label--4,
+    .toggle__label--5 {
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
+  }
+
+  //   &__inner__menus--1 {
+  //     max-height: 0;
+  //     display: flex;
+  //     flex-direction: column;
+  //     gap: 1rem;
+  //     padding-left: 1rem;
+  //     visibility: hidden;
+  //     overflow: hidden;
+  //     transition: all 0.4s ease;
+  //   }
+
+  &__inner__menus--1,
+  &__inner__menus--2,
+  &__inner__menus--3,
+  &__inner__menus--4,
+  &__inner__menus--5 {
+    max-height: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding-left: 1rem;
+    // margin-top: 1rem;
+    visibility: hidden;
+    overflow: hidden;
+    transition: all 0.4s ease;
+  }
+
+  &__inner__menu {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    list-style: none;
+    width: 80%;
+    margin: auto;
+  }
+}
+
+.toggle__input--2:checked + .toggle__label--2 + .sidebar__inner__menus--2 {
+  max-height: 500px;
+  visibility: visible;
+  margin-top: 1rem;
+}
+
+.toggle__input--3:checked + .toggle__label--3 + .sidebar__inner__menus--3 {
+  max-height: 500px;
+  visibility: visible;
+  margin-top: 1rem;
 }
