--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,9 @@
 @import "variables";
 @import "mixins";
 
+@import "components/card";
+@import "components/content";
+@import "typography";
 @import "components/sidebar";
 @import "base";
 // @import "base";
