--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,293 @@
-.sidebar {
+.card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100vh;
+  height: 100%;
+  padding: 3rem;
+  border-radius: 20px;
+  background-color: #fcbea4;
+  gap: 1rem;
+}
+.card__header {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
-.sidebar__logo-img {
-  margin-top: 1rem;
+.card__img {
+  height: 3.5rem;
+  width: 3.5rem;
+  border-radius: 50%;
+  border: 2px solid #fcbea4;
+  display: inline-block;
+}
+.card__img:first-child {
+  background-color: #292929;
+}
+.card__img:last-child {
+  z-index: 0;
+  overflow: hidden;
+}
+.card__img:not(:last-child) {
+  margin-right: -1.5rem;
+}
+.card__dots {
+  height: 2rem;
+}
+.card__body {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  height: 15rem;
+}
+.card__footer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.card__footer progress {
+  height: 0.9rem;
+  width: 100%;
+  border-radius: 50px;
+  overflow: hidden;
+}
+.card__footer progress::-webkit-progress-bar {
+  background-color: rgba(144, 144, 144, 0.301);
+  border-radius: 50px;
+}
+.card__footer progress::-webkit-progress-value {
+  background-color: #292929;
+  border-radius: 50px;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(15rem, max-content));
+  grid-template-rows: minmax(15rem, min-content) 1fr minmax(15rem, min-content);
+  height: 100%;
+  padding: 0 2.5rem;
+}
+.main__search {
+  grid-column: 1/-1;
+  padding: 1rem;
+  display: grid;
+  grid-row-gap: 1.5rem;
+  justify-items: start;
+  align-self: center;
+  position: relative;
+}
+.main .search {
+  position: relative;
+  width: 100%;
+}
+.main .search__input {
+  width: 100%;
+  height: 3.5rem;
+  padding: 0.5rem 1rem;
+  padding-left: 3rem;
+  outline: none;
+  border: 1px solid rgba(199, 199, 199, 0.4745098039);
+  border-radius: 100px;
+}
+.main .search__input:focus {
+  outline: none;
+  box-shadow: 3px 3px 3px 2px rgba(199, 199, 199, 0.4745098039);
+  border: 1px solid #292929;
+}
+.main .search__icon {
+  position: absolute;
+  left: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 1.5rem;
+  width: 1.5rem;
+  color: #585858;
+}
+.main__body {
+  grid-column: 1/3;
+  grid-row: 2/3;
+}
+.main__body__heading {
+  display: flex;
+}
+.main__body__cards {
+  display: flex;
+  height: 100%;
+}
+.heading--1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #292929;
+}
+
+.heading--2 {
+  font-size: 2.4rem;
+  font-weight: 600;
+  line-height: 1.3;
+  color: #292929;
+}
+
+.heading--3 {
+  font-size: 1.4rem;
+  font-weight: 550;
+  line-height: 1.4;
+  color: #292929;
+}
+
+.sm--text {
+  font-size: 1.3rem;
+  font-weight: 550;
+  line-height: 1.5;
+  color: #585858;
+}
+
+.sidebar__left {
+  grid-column: 1/2;
+  display: grid;
+  grid-template-columns: minmax(7rem, 1fr);
+  grid-template-rows: minmax(8rem, min-content) 1fr minmax(8rem, min-content);
+  justify-items: stretch;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+}
+.sidebar__left__logos {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid rgba(199, 199, 199, 0.4745098039);
+}
+.sidebar__left__logo {
+  grid-column: 1/2;
+  grid-row: 1/2;
   height: 5rem;
   width: 5.7rem;
+  justify-self: center;
 }
-.sidebar__items {
+.sidebar__left__items {
+  grid-column: 1/2;
+  grid-row: 2/3;
   list-style: none;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.sidebar__item {
+.sidebar__left__item {
   transition: all 0.3s ease-in-out;
+  width: 100%;
 }
-.sidebar__item:hover {
-  background-color: #F2ECE2;
+.sidebar__left__item > button {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
-.sidebar__icon {
-  padding: 1.8rem;
+.sidebar__left__item:first-child {
+  background-color: #f2ece2;
+}
+.sidebar__left__item:hover, .sidebar__left__item:active {
+  background-color: #f2ece2;
+}
+.sidebar__left__icon {
+  padding: 2.5rem;
   height: 2.5rem;
   width: 2.5rem;
 }
-.sidebar__doubt {
+.sidebar__left__doubt {
+  grid-column: 1/2;
+  grid-row: 3/4;
   height: 3.5rem;
-  color: #F2ECE2;
+  color: #ffffff;
   width: 3.5rem;
   border-radius: 50%;
   background-color: #111111;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 2rem;
+  margin: auto;
+}
+.sidebar__right {
+  grid-column: 2/3;
+  display: grid;
+  grid-template-columns: minmax(15rem, max-content);
+  grid-template-rows: minmax(8rem, min-content) 1fr minmax(5rem, min-content);
+  width: 100%;
+  background-color: #f2ece2;
+}
+.sidebar__right__header {
+  grid-column: 1/2;
+  grid-row: 1/2;
+  width: 100%;
+  height: 100%;
+  border-bottom: 1px solid rgba(199, 199, 199, 0.4745098039);
+  align-content: center;
+  padding: 0 2.5rem;
+}
+.sidebar__menu-bar {
+  grid-column: 1/2;
+  grid-row: 2/3;
+  justify-items: center;
+}
+.sidebar__menus {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  margin: 1.5rem 2.5rem;
+}
+.sidebar__menu {
+  list-style: none;
+}
+.sidebar__menu .toggle__input--1,
+.sidebar__menu .toggle__input--2,
+.sidebar__menu .toggle__input--3,
+.sidebar__menu .toggle__input--4,
+.sidebar__menu .toggle__input--5 {
+  display: none;
+  margin-bottom: 1.5rem;
+}
+.sidebar__menu .toggle__label--1,
+.sidebar__menu .toggle__label--2,
+.sidebar__menu .toggle__label--3,
+.sidebar__menu .toggle__label--4,
+.sidebar__menu .toggle__label--5 {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.sidebar__inner__menus--1, .sidebar__inner__menus--2, .sidebar__inner__menus--3, .sidebar__inner__menus--4, .sidebar__inner__menus--5 {
+  max-height: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-left: 1rem;
+  visibility: hidden;
+  overflow: hidden;
+  transition: all 0.4s ease;
+}
+.sidebar__inner__menu {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  list-style: none;
+  width: 80%;
+  margin: auto;
+}
+
+.toggle__input--2:checked + .toggle__label--2 + .sidebar__inner__menus--2 {
+  max-height: 500px;
+  visibility: visible;
+  margin-top: 1rem;
+}
+
+.toggle__input--3:checked + .toggle__label--3 + .sidebar__inner__menus--3 {
+  max-height: 500px;
+  visibility: visible;
+  margin-top: 1rem;
 }
 
 *,
@@ -54,17 +305,24 @@ html {
 body {
   font-family: sans-serif;
   display: grid;
-  grid-template-columns: minmax(8rem, max-content) minmax(25rem, min-content) 1fr 45rem;
+  grid-template-columns: minmax(15rem, max-content) 1fr 45rem;
   height: 100vh;
 }
 
-.section-sidebar {
+.section__sidebar {
   grid-column: 1/2;
+  display: grid;
+  grid-template-columns: minmax(10rem, max-content) 1fr;
 }
 
 .clock__img {
-  height: 2rem;
-  width: 2rem;
+  margin: 1.8rem;
+  height: 2.5rem;
+  width: 2.5rem;
+}
+
+.section__main {
+  grid-column: 2/3;
 }
 
 /*# sourceMappingURL=style.css.map */
