full templete completed without responsiveness

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,6 +1,10 @@
 $color-light: #ffffff;
 $color-orange: #f0894d;
+$color-pink-dark: #fba580;
 $color-pink: #fcbea4;
+$color-pink-light: #ffe0d2;
+$color-pink-lighter: #fff2e8;
+
 $color-cream: #fce6bd;
 $color-dark: #111111;
 $color-grey: #9d9d9d;
@@ -9,6 +13,7 @@ $color-bg: #f2ece2;
 $color-dark-2: #292929;
 $color-dark-3: #414141;
 $color-dark-4: #585858;
+$color-dark-4-5: #5c5c5c;
 $color-dark-5: #c7c7c779;
 
 $color-progress-bg: rgba(144, 144, 144, 0.301);
