--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -1,18 +1,18 @@
 .main {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(15rem, max-content));
-  grid-template-rows: minmax(15rem, min-content) 1fr minmax(15rem, min-content);
+  // display: grid;
+  // grid-template-rows: minmax(15rem, min-content) 1fr minmax(15rem, min-content);
   height: 100%;
-  padding: 0 2.5rem;
+  padding: 0 3.2rem;
 
   &__search {
-    grid-column: 1 / -1;
     padding: 1rem;
-    display: grid;
     grid-row-gap: 1.5rem;
+    display: flex;
+    flex-direction: column;
     justify-items: start;
     align-self: center;
     position: relative;
+    padding-bottom: 2.8rem;
   }
 
   .search {
@@ -22,17 +22,19 @@
 
   .search__input {
     width: 100%;
-    height: 3.5rem;
+    height: 4rem;
     padding: 0.5rem 1rem;
     padding-left: 3rem;
     outline: none;
     border: 1px solid $color-dark-5;
     border-radius: 100px;
-  }
-  .search__input:focus {
-    outline: none;
-    box-shadow: 3px 3px 3px 2px $color-dark-5;
-    border: 1px solid $color-dark-2;
+    transition: all 0.2s;
+
+    &:focus {
+      outline: none;
+      box-shadow: 3px 3px 1.5rem 1px #76767621;
+      border: 1px solid $color-dark-2;
+    }
   }
 
   .search__icon {
@@ -43,22 +45,84 @@
     height: 1.5rem;
     width: 1.5rem;
     color: $color-dark-4;
+    z-index: 99;
   }
 
   &__body {
-    grid-column: 1 / 3;
-    grid-row: 2 / 3;
-
     &__heading {
+      padding: 0 1.2rem;
       display: flex;
-    }
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 1.5rem;
 
-    &__cards {
-      display: flex;
-      height: 100%;
+      & > a {
+        text-decoration: none;
+        font-size: 1.3rem;
+        color: $color-orange;
+      }
     }
+    // display: flex;
+    // flex-direction: column;
+    // // height: ;
+  }
+
+  &__cards {
+    padding: 0 1rem;
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    margin-bottom: 3rem;
   }
 
   &__footer {
+    padding: 0 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+    margin-top: 2rem;
+  }
+
+  .footer {
+    &__card {
+      border-radius: 2rem;
+      border: 1px solid $color-dark-5;
+      padding: 2.5rem;
+    }
+
+    &__body {
+      display: flex;
+      gap: 10rem;
+      justify-content: space-between;
+
+      & p {
+        // margin-right: 17rem;
+      }
+    }
+
+    &__footer {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+      margin-top: 2rem;
+    }
+
+    &__dots {
+      border: none;
+      border-radius: 50%;
+      width: 0.7rem;
+      height: 0.7rem;
+      cursor: pointer;
+      background-color: $color-pink-light;
+
+      &:hover {
+        background-color: $color-pink-dark;
+      }
+
+      &:first-child {
+        background-color: $color-pink-dark;
+      }
+    }
   }
 }
