--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "mixins";
 
+@import "components/members";
 @import "components/card";
 @import "components/content";
 @import "typography";
