--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,258 @@
+.members {
+  padding: 0 4rem;
+  padding-left: 5rem;
+}
+.members__heading {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.members__body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 5rem;
+}
+.members__tasks {
+  margin-top: 2rem;
+}
+
+.heading {
+  width: 100%;
+  display: flex;
+}
+.heading__nav-dots {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  width: 100%;
+  height: 2.1rem;
+  padding: 2.5rem 0;
+}
+.heading__body {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.heading__items {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+  margin-left: auto;
+}
+.heading__item {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+.heading__item img {
+  border-radius: 50%;
+  width: 3.5rem;
+  height: 3.5rem;
+}
+
+.img__name {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.pos__name {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.dropdown {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffe0d2;
+}
+.dropdown ion-icon {
+  color: #fba580;
+}
+
+.member {
+  display: flex;
+  flex-direction: column;
+}
+.member__imgs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+  max-width: fit-content;
+}
+.member__img {
+  border-radius: 50%;
+  width: 5.5rem;
+  height: 5.5rem;
+}
+.member__add {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3rem;
+  width: 3rem;
+  font-size: 2.4rem;
+  font-weight: 400;
+  color: #f0894d;
+  background-color: #fff2e8;
+  border-radius: 50%;
+  border: 2px dashed #f0894d;
+}
+.member__progress {
+  width: 100%;
+  padding: 2rem;
+  height: 10rem;
+  border-radius: 20px;
+  box-shadow: 0 0 1rem 0.5rem rgba(208, 208, 208, 0.1294117647);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+.member__progress__type {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.member__progress__type p {
+  color: #585858;
+}
+.member__progress__type h2 {
+  font-size: 1.8rem;
+}
+
+.tasks__heading {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+.tasks__heading a {
+  font-size: 1.4rem;
+  font-weight: 500 !important;
+  text-decoration: none;
+  color: #f0894d;
+  margin-right: 2rem;
+}
+.tasks__body {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(17rem, min-content));
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+
+.task {
+  height: 13rem;
+  font-size: 1.8rem !important;
+  font-weight: 400 !important;
+  padding: 3.5rem 2rem;
+  color: #5c5c5c;
+  background-color: #fff2e8;
+  border-radius: 1rem;
+  position: relative;
+  box-shadow: 0rem 0.5rem 1rem 0.5rem rgba(118, 118, 118, 0.1294117647);
+}
+.task h3 {
+  font-weight: 500 !important;
+}
+.task span {
+  position: absolute;
+  top: 1.3rem;
+  right: 1.3rem;
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 0.5rem;
+}
+.task span ion-icon {
+  height: 1rem;
+  width: 1rem;
+  color: #ff3b3b;
+}
+.task span input[name=checkbox] {
+  appearance: none;
+  -webkit-appearance: none;
+  width: 1.2rem;
+  height: 1.2rem;
+  cursor: pointer;
+  border: 2px solid #fba580;
+  border-radius: 2px;
+}
+.task span input[name=checkbox]:checked {
+  color: #ffffff;
+  background-color: #fba580;
+}
+.task--2 {
+  background-color: #ffffff;
+}
+.task--2 span ion-icon {
+  height: 1rem;
+  width: 1rem;
+  color: #ff3b3b;
+}
+.task--3 {
+  background-color: #ffffff;
+}
+.task--3 span ion-icon {
+  height: 1rem;
+  width: 1rem;
+  color: rgb(51, 236, 180);
+}
+.task--4 {
+  background-color: #f0894d;
+}
+.task--4 h3 {
+  font-weight: 400 !important;
+  letter-spacing: 1.1px;
+  color: #ffffff !important;
+}
+.task--4 span ion-icon {
+  height: 1rem;
+  width: 1rem;
+  color: #ffffff;
+}
+.task--4 span input[name=checkbox] {
+  appearance: none;
+  -webkit-appearance: none;
+  border: 1px solid #111111;
+  background-color: #111111;
+}
+.task p {
+  font-size: 2.2rem;
+  font-weight: 400;
+  position: absolute;
+  bottom: 1rem;
+  right: 1.5rem;
+}
+
 .card {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  height: 33rem;
+  width: 50%;
   padding: 3rem;
   border-radius: 20px;
   background-color: #fcbea4;
   gap: 1rem;
+  box-shadow: 0.5rem 0.5rem 1.5rem 0.5rem rgba(118, 118, 118, 0.1294117647);
 }
 .card__header {
   display: flex;
@@ -36,8 +282,9 @@
 .card__body {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   height: 15rem;
+  padding-bottom: auto;
 }
 .card__footer {
   display: flex;
@@ -60,20 +307,18 @@
 }
 
 .main {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(15rem, max-content));
-  grid-template-rows: minmax(15rem, min-content) 1fr minmax(15rem, min-content);
   height: 100%;
-  padding: 0 2.5rem;
+  padding: 0 3.2rem;
 }
 .main__search {
-  grid-column: 1/-1;
   padding: 1rem;
-  display: grid;
   grid-row-gap: 1.5rem;
+  display: flex;
+  flex-direction: column;
   justify-items: start;
   align-self: center;
   position: relative;
+  padding-bottom: 2.8rem;
 }
 .main .search {
   position: relative;
@@ -81,16 +326,17 @@
 }
 .main .search__input {
   width: 100%;
-  height: 3.5rem;
+  height: 4rem;
   padding: 0.5rem 1rem;
   padding-left: 3rem;
   outline: none;
   border: 1px solid rgba(199, 199, 199, 0.4745098039);
   border-radius: 100px;
+  transition: all 0.2s;
 }
 .main .search__input:focus {
   outline: none;
-  box-shadow: 3px 3px 3px 2px rgba(199, 199, 199, 0.4745098039);
+  box-shadow: 3px 3px 1.5rem 1px rgba(118, 118, 118, 0.1294117647);
   border: 1px solid #292929;
 }
 .main .search__icon {
@@ -101,18 +347,66 @@
   height: 1.5rem;
   width: 1.5rem;
   color: #585858;
-}
-.main__body {
-  grid-column: 1/3;
-  grid-row: 2/3;
+  z-index: 99;
 }
 .main__body__heading {
+  padding: 0 1.2rem;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
-.main__body__cards {
+.main__body__heading > a {
+  text-decoration: none;
+  font-size: 1.3rem;
+  color: #f0894d;
+}
+.main__cards {
+  padding: 0 1rem;
   display: flex;
-  height: 100%;
+  justify-content: space-between;
+  gap: 2rem;
+  margin-bottom: 3rem;
 }
+.main__footer {
+  padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+  margin-top: 2rem;
+}
+.main .footer__card {
+  border-radius: 2rem;
+  border: 1px solid rgba(199, 199, 199, 0.4745098039);
+  padding: 2.5rem;
+}
+.main .footer__body {
+  display: flex;
+  gap: 10rem;
+  justify-content: space-between;
+}
+.main .footer__footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  margin-top: 2rem;
+}
+.main .footer__dots {
+  border: none;
+  border-radius: 50%;
+  width: 0.7rem;
+  height: 0.7rem;
+  cursor: pointer;
+  background-color: #ffe0d2;
+}
+.main .footer__dots:hover {
+  background-color: #fba580;
+}
+.main .footer__dots:first-child {
+  background-color: #fba580;
+}
+
 .heading--1 {
   font-size: 2.5rem;
   font-weight: 700;
@@ -127,8 +421,21 @@
   color: #292929;
 }
 
+.heading--2-5 {
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.4;
+}
+
 .heading--3 {
   font-size: 1.4rem;
+  font-weight: 550;
+  line-height: 1.4;
+  color: #414141;
+}
+
+.heading--4 {
+  font-size: 1.2rem;
   font-weight: 550;
   line-height: 1.4;
   color: #292929;
@@ -139,6 +446,67 @@
   font-weight: 550;
   line-height: 1.5;
   color: #585858;
+}
+
+.xsm--text {
+  font-size: 1rem;
+  color: #585858;
+  font-weight: 550;
+}
+
+.btn-reminder {
+  width: 11rem;
+  font-weight: 550;
+  font-size: 1.2rem;
+  color: #414141;
+  border: none;
+  border-radius: 100px;
+  border: 1px dashed #f0894d;
+  background-color: #fff;
+  padding: 1rem 1.5rem;
+}
+
+.btn__add__projects {
+  height: 3.8rem;
+  width: 13rem;
+  font-weight: 450;
+  letter-spacing: 1px;
+  font-size: 1.2rem;
+  color: #ffffff;
+  border: none;
+  border-radius: 100px;
+  background-color: #f0894d;
+  display: inline;
+  cursor: pointer;
+  margin-right: auto;
+}
+
+.heading__noti-item {
+  width: 2.2rem;
+  height: 2.2rem;
+  color: #585858;
+  position: relative;
+  cursor: pointer;
+}
+.heading__noti-item:hover {
+  color: #292929;
+}
+.heading__noti-item::before {
+  content: "";
+  position: absolute;
+  top: 0.4rem;
+  right: 0.55rem;
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #f0894d;
+  border-radius: 50%;
+}
+
+.three__dots {
+  width: 3rem;
+  height: 3rem;
+  color: #fba580;
+  cursor: pointer;
 }
 
 .sidebar__left {
@@ -209,6 +577,11 @@
   align-items: center;
   justify-content: center;
   margin: auto;
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+.sidebar__left__doubt:hover {
+  background-color: #414141;
 }
 .sidebar__right {
   grid-column: 2/3;
@@ -305,14 +678,14 @@ html {
 body {
   font-family: sans-serif;
   display: grid;
-  grid-template-columns: minmax(15rem, max-content) 1fr 45rem;
+  grid-template-columns: minmax(15rem, max-content) minmax(1fr, min-content) minmax(1fr, min-content);
   height: 100vh;
 }
 
 .section__sidebar {
   grid-column: 1/2;
   display: grid;
-  grid-template-columns: minmax(10rem, max-content) 1fr;
+  grid-template-columns: minmax(7.5rem, max-content) 1fr;
 }
 
 .clock__img {
@@ -323,6 +696,11 @@ body {
 
 .section__main {
   grid-column: 2/3;
+}
+
+.section__members {
+  grid-column: 3/4;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
