--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -13,7 +13,10 @@ html {
 body {
   font-family: sans-serif;
   display: grid;
-  grid-template-columns: minmax(15rem, max-content) 1fr 45rem;
+  grid-template-columns: minmax(15rem, max-content) minmax(1fr, min-content) minmax(
+      1fr,
+      min-content
+    );
   height: 100vh;
   // grid-template-rows: ;
 }
@@ -22,7 +25,7 @@ body {
   grid-column: 1 / 2;
 
   display: grid;
-  grid-template-columns: minmax(10rem, max-content) 1fr;
+  grid-template-columns: minmax(7.5rem, max-content) 1fr;
   // grid-template-rows: minmax(10rem, min-content) 1fr minmax(10rem, max-content);
   // grid-template-rows: 1fr auto;
 }
@@ -34,4 +37,9 @@ body {
 
 .section__main {
   grid-column: 2 / 3;
+}
+
+.section__members {
+  grid-column: 3 / 4;
+  width: 100%;
 }
