--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -13,8 +13,23 @@
   color: $color-dark-2;
   // margin-bottom: 1.4rem;
 }
+
+.heading--2-5 {
+  font-size: 1.8rem;
+  font-weight: 600;
+  line-height: 1.4;
+}
+
 .heading--3 {
   font-size: 1.4rem;
+  font-weight: 550;
+  line-height: 1.4;
+  color: $color-dark-3;
+  // margin-bottom: 1.2rem;
+}
+
+.heading--4 {
+  font-size: 1.2rem;
   font-weight: 550;
   line-height: 1.4;
   color: $color-dark-2;
@@ -26,4 +41,68 @@
   font-weight: 550;
   line-height: 1.5;
   color: $color-dark-4;
+}
+
+.xsm--text {
+  font-size: 1rem;
+  color: $color-dark-4;
+  font-weight: 550;
+}
+
+.btn-reminder {
+  width: 11rem;
+  font-weight: 550;
+  font-size: 1.2rem;
+  color: $color-dark-3;
+  border: none;
+  border-radius: 100px;
+  border: 1px dashed $color-orange;
+  background-color: #fff;
+  padding: 1rem 1.5rem;
+}
+
+.btn__add__projects {
+  height: 3.8rem;
+  width: 13rem;
+  font-weight: 450;
+  letter-spacing: 1px;
+  font-size: 1.2rem;
+  color: $color-light;
+  border: none;
+  border-radius: 100px;
+  background-color: $color-orange;
+  // padding: 1rem 1.7rem;
+  display: inline;
+  cursor: pointer;
+  margin-right: auto;
+}
+
+.heading__noti-item {
+  width: 2.2rem;
+  height: 2.2rem;
+  color: $color-dark-4;
+  position: relative;
+  cursor: pointer;
+
+  &:hover {
+    color: $color-dark-2;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0.4rem;
+    right: 0.55rem;
+    width: 0.5rem;
+    height: 0.5rem;
+    background-color: $color-orange;
+    border-radius: 50%;
+  }
+}
+
+.three__dots {
+  width: 3rem;
+  height: 3rem;
+  color: $color-pink-dark;
+  cursor: pointer;
 }
