--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,6 @@
 $color-light: #ffffff;
 $color-orange: #f0894d;
+$color-orange-light: #e08b59;
 $color-pink-dark: #fba580;
 $color-pink: #fcbea4;
 $color-pink-light: #ffe0d2;
