--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -3,6 +3,22 @@
   font-weight: 700;
   line-height: 1.2;
   color: $color-dark-2;
+
+  @include response(big-desktop){
+    font-size: 3rem;
+  }
+  @include response(desktop){
+    font-size: 2.8rem;
+  }
+  @include response(tab-land){
+    font-size: 2.5rem;
+  }
+  @include response(tab-port){
+    font-size: 2.3rem;
+  }
+  @include response(mobile){
+    font-size: 2rem;
+  }
   // margin-bottom: 1.6rem;
 }
 
@@ -11,6 +27,22 @@
   font-weight: 600;
   line-height: 1.3;
   color: $color-dark-2;
+
+  @include response(big-desktop){
+    font-size: 2.8rem;
+  }
+  @include response(desktop){
+    font-size: 2.5rem;
+  }
+  @include response(tab-land){
+    font-size: 2.2rem;
+  }
+  @include response(tab-port){
+    font-size: 2rem;
+  }
+  @include response(mobile){
+    font-size: 1.8rem;
+  }
   // margin-bottom: 1.4rem;
 }
 
@@ -18,6 +50,22 @@
   font-size: 1.8rem;
   font-weight: 600;
   line-height: 1.4;
+
+  @include response(big-desktop){
+    font-size: 2.2rem;
+  }
+  @include response(desktop){
+    font-size: 1.9rem;
+  }
+  @include response(tab-land){
+    font-size: 1.7rem;
+  }
+  @include response(tab-port){
+    font-size: 1.5rem;
+  }
+  @include response(mobile){
+    font-size: 1.3rem;
+  }
 }
 
 .heading--3 {
@@ -25,6 +73,22 @@
   font-weight: 550;
   line-height: 1.4;
   color: $color-dark-3;
+  
+  @include response(big-desktop){
+    font-size: 1.8rem;
+  }
+  @include response(desktop){
+    font-size: 1.5rem;
+  }
+  @include response(tab-land){
+    font-size: 1.3rem;
+  }
+  @include response(tab-port){
+    font-size: 1.2rem;
+  }
+  @include response(mobile){
+    font-size: 1.1rem;
+  }
   // margin-bottom: 1.2rem;
 }
 
@@ -33,6 +97,22 @@
   font-weight: 550;
   line-height: 1.4;
   color: $color-dark-2;
+
+  @include response(big-desktop){
+    font-size: 1.6rem;
+  }
+  @include response(desktop){
+    font-size: 1.4rem;
+  }
+  @include response(tab-land){
+    font-size: 1.2rem;
+  }
+  @include response(tab-port){
+    font-size: 1.1rem;
+  }
+  @include response(mobile){
+    font-size: .9rem;
+  }
   // margin-bottom: 1.2rem;
 }
 
@@ -41,12 +121,20 @@
   font-weight: 550;
   line-height: 1.5;
   color: $color-dark-4;
+
+  @include response(big-desktop){
+    font-size: 1.5rem;
+  }
 }
 
 .xsm--text {
   font-size: 1rem;
   color: $color-dark-4;
   font-weight: 550;
+  
+  @include response(big-desktop){
+    font-size: 1.4rem;
+  }
 }
 
 .btn-reminder {
@@ -58,7 +146,41 @@
   border-radius: 100px;
   border: 1px dashed $color-orange;
   background-color: #fff;
-  padding: 1rem 1.5rem;
+  padding: 1.3rem 1.6rem;
+  align-self: self-start;
+  transition: all .3s;
+  cursor: pointer;
+
+  &:hover{
+    background-color: $color-orange-light;
+    color: #fff;
+  }
+
+  @include response(big-desktop){
+    width: 13rem;
+    font-size: 1.25rem;
+
+  }
+  @include response(desktop){
+    width: 12rem;
+    font-size: 1.1rem;
+    padding: 1rem 1.4rem;
+  }
+  @include response(tab-land){
+    width: 11rem;
+    font-size: 1rem;
+    padding: 0.8rem 1.2rem;
+  }
+  @include response(tab-port){
+    width: 10rem;
+    font-size: 1rem;
+    padding: 0.7rem 1rem;
+  }
+  @include response(mobile){
+    width: 9rem;
+    font-size: 1rem;
+    padding: 0.6rem 0.8rem;
+  }
 }
 
 .btn__add__projects {
@@ -75,6 +197,38 @@
   display: inline;
   cursor: pointer;
   margin-right: auto;
+  // transition: all .3s;
+
+  &:hover{
+    background-color: $color-orange-light;
+  }
+
+  @include response(big-desktop){
+    height: 4.5rem;
+    width: 15rem;
+    font-size: 1.6rem;
+  }
+  @include response(desktop){
+    height: 4rem;
+    width: 14rem;
+    font-size: 1.4rem;
+  }
+  @include response(tab-land){
+    height: 3.5rem;
+    width: 13rem;
+    font-size: 1.2rem;
+  }
+  @include response(tab-port){
+    height: 3rem;
+    width: 12rem;
+    font-size: 1.1rem;
+  }
+  @include response(mobile){
+    height: 2.5rem;
+    width: 10rem;
+    font-size: 1rem;
+  }
+
 }
 
 .heading__noti-item {
@@ -98,6 +252,23 @@
     background-color: $color-orange;
     border-radius: 50%;
   }
+
+  @include response(big-desktop) {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+  @include response(tab-land) {
+    width: 2.3rem;
+    height: 2.3rem;
+  }
+  @include response(tab-port) {
+    width: 2.1rem;
+    height: 2.1rem;
+  }
+  @include response(mobile) {
+    width: 2rem;
+    height: 2rem;
+  }
 }
 
 .three__dots {
@@ -105,4 +276,24 @@
   height: 3rem;
   color: $color-pink-dark;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @include response(big-desktop) {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+  @include response(tab-land) {
+    width: 3.2rem;
+    height: 3.2rem;
+  }
+  @include response(tab-port) {
+    width: 3rem;
+    height: 3rem;
+  }
+  @include response(mobile) {
+    width: 2.8rem;
+    height: 2.8rem;
+  }
 }
