--- a/sass/components/_members.scss
+++ b/sass/components/_members.scss
@@ -2,12 +2,51 @@
   //   border: 1px solid $color-dark-2;
   padding: 0 4rem;
   padding-left: 5rem;
+  width: 100%;
+  box-shadow: 0 0 1rem 0.5rem #c0c0c038;
+  @include response(big-desktop) {
+    padding: 0 6rem;
+    // padding-left: 8rem;
+  }
+  @include response(desktop){
+    padding: 0 3rem;
+    padding-left: 4rem;
+  }
+  @include response(tab-land) {
+    padding: 0 1rem;
+    padding-left: 2rem;
+  }
+  @include response(tab-port) {
+    padding: 0 1rem;
+    padding-left: 2rem;
+  }
+  @include response(mobile) {
+    padding: 0 1.5rem;
+    padding-left: 2rem;
+  }
+  
   &__heading {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     // align-items: center;
     margin-bottom: 1rem;
+
+    @include response(big-desktop) {
+      margin-bottom: 2rem;
+    }
+    @include response(desktop) {
+      margin-bottom: 1.5rem;
+    }
+    @include response(tab-land) {
+      margin-bottom: 1.2rem;
+    }
+    @include response(tab-port) {
+      margin-bottom: 1rem;
+    }
+    @include response(mobile) {
+      margin-bottom: 0.8rem;
+    }
   }
 
   &__body {
@@ -15,6 +54,27 @@
     flex-direction: column;
     gap: 1rem;
     margin-top: 5rem;
+    padding-bottom: 4rem;
+    @include response(big-desktop) {
+      gap: 2rem;
+      margin-top: 3.5rem;
+    }
+    @include response(desktop) {
+      gap: 1.5rem;
+      margin-top: 3rem;
+    }
+    @include response(tab-land) {
+      gap: 1.2rem;
+      margin-top: 2.5rem;
+    }
+    @include response(tab-port) {
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+    @include response(mobile) {
+      gap: 0.8rem;
+      margin-top: 1.5rem;
+    }
   }
 
   &__tasks {
@@ -34,6 +94,22 @@
     width: 100%;
     height: 2.1rem;
     padding: 2.5rem 0;
+
+    @include response(big-desktop) {
+      height: 8.4rem;
+    }
+    @include response(desktop) {
+      height: 6rem;
+    }
+    @include response(tab-land) {
+      height: 4.5rem;
+    }
+    @include response(tab-port) {
+      height: 3.5rem;
+    }
+    @include response(mobile) {
+      height: 2.5rem;
+    }
   }
 
   &__body {
@@ -49,6 +125,22 @@
     gap: 2rem;
     width: 100%;
     margin-left: auto;
+
+    @include response(big-desktop) {
+      gap: 2.5rem;
+    }
+    @include response(desktop) {
+      gap: 2rem;
+    }
+    @include response(tab-land) {
+      gap: 1.5rem;
+    }
+    @include response(tab-port) {
+      gap: 1.2rem;
+    }
+    @include response(mobile) {
+      gap: 1rem;
+    }
   }
 
   &__item {
@@ -58,10 +150,34 @@
     align-items: center;
     gap: 1rem;
 
+    @include response(big-desktop) {
+      gap: 1.5rem;
+    }
+    @include response(tab-port) {
+      gap: 1rem;
+    }
+
     & img {
       border-radius: 50%;
       width: 3.5rem;
       height: 3.5rem;
+
+      @include response(big-desktop) {
+        width: 4.5rem;
+        height: 4.5rem;
+      }
+      @include response(tab-land) {
+        width: 4rem;
+        height: 4rem;
+      }
+      @include response(tab-port) {
+        width: 3.5rem;
+        height: 3.5rem;
+      }
+      @include response(mobile) {
+        width: 3rem;
+        height: 3rem;
+      }
     }
   }
 }
@@ -72,6 +188,13 @@
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
+
+  @include response(big-desktop) {
+    gap: 1.5rem;
+  }
+  @include response(tab-port) {
+    gap: 1rem;
+  }
 }
 
 .pos__name {
@@ -80,6 +203,19 @@
   //   align-items: center;
   //   justify-items: space-between;
   gap: 0.3rem;
+
+  @include response(big-desktop) {
+    gap: 1rem;
+  }
+  @include response(tab-land) {
+    gap: 0.8rem;
+  }
+  @include response(tab-port) {
+    gap: 0.7rem;
+  }
+  @include response(mobile) {
+    gap: 0.5rem;
+  }
 }
 
 .dropdown {
@@ -94,6 +230,42 @@
   & ion-icon {
     color: $color-pink-dark;
   }
+
+  @include response(big-desktop) {
+    width: 2.5rem;
+    height: 2.5rem;
+    & ion-icon {
+      font-size: 1.8rem;
+    }
+  }
+  @include response(desktop) {
+    width: 2.3rem;
+    height: 2.3rem;
+    & ion-icon {
+      font-size: 1.6rem;
+    }
+  }
+  @include response(tab-land) {
+    width: 2.1rem;
+    height: 2.1rem;
+    & ion-icon {
+      font-size: 1.4rem;
+    }
+  }
+  @include response(tab-port) {
+    width: 2rem;
+    height: 2rem;
+    & ion-icon {
+      font-size: 1.2rem;
+    }
+  }
+  @include response(mobile) {
+    width: 1.8rem;
+    height: 1.8rem;
+    & ion-icon {
+      font-size: 1rem;
+    }
+  }
 }
 
 .member {
@@ -105,11 +277,50 @@
     align-items: center;
     gap: 1rem;
     max-width: fit-content;
+
+    @include response(big-desktop) {
+      gap: 1.5rem;
+    }
+    @include response(desktop) {
+      gap: 1.2rem;
+    }
+    @include response(tab-land) {
+      gap: 1rem;
+    }
+    @include response(tab-port) {
+      gap: 0.8rem;
+    }
   }
   &__img {
     border-radius: 50%;
     width: 5.5rem;
     height: 5.5rem;
+
+    @include response(big-desktop) {
+      width: 6.5rem;
+      height: 6.5rem;
+      margin-bottom: 1.7rem;
+    }
+    @include response(desktop) {
+      width: 5rem;
+      height: 5rem;
+      margin-bottom: 1.5rem;
+    }
+    @include response(tab-land) {
+      width: 4.5rem;
+      height: 4.5rem;
+      margin-bottom: 1.2rem;
+    }
+    @include response(tab-port) {
+      width: 4rem;
+      height: 4rem;
+      margin-bottom: 1rem;
+    }
+    @include response(mobile) {
+      width: 3.5rem;
+      height: 3.5rem;
+      margin-bottom: 0.8rem;
+    }
   }
 
   &__add {
@@ -124,6 +335,32 @@
     background-color: $color-pink-lighter;
     border-radius: 50%;
     border: 2px dashed $color-orange;
+
+    @include response(big-desktop) {
+      height: 4rem;
+      width: 4rem;
+      font-size: 3rem;
+    }
+    @include response(desktop) {
+      height: 3.5rem;
+      width: 3.5rem;
+      font-size: 2.6rem;
+    }
+    @include response(tab-land) {
+      height: 3rem;
+      width: 3rem;
+      font-size: 2.4rem;
+    }
+    @include response(tab-port) {
+      height: 2.5rem;
+      width: 2.5rem;
+      font-size: 2rem;
+    }
+    @include response(mobile) {
+      height: 2rem;
+      width: 2rem;
+      font-size: 1.6rem;
+    }
   }
 
   &__progress {
@@ -131,12 +368,38 @@
     padding: 2rem;
     height: 10rem;
     border-radius: 20px;
-    box-shadow: 0 0 1rem 0.5rem #d0d0d021;
+    box-shadow: 0 0 1rem 0.5rem #c0c0c038;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
+
+    @include response(big-desktop) {
+      height: 11rem;
+      padding: 3rem;
+      gap: 2rem;
+    }
+    @include response(desktop) {
+      height: 10rem;
+      padding: 2.5rem;
+      gap: 1.5rem;
+    }
+    @include response(tab-land) {
+      height: 9rem;
+      padding: 2rem;
+      gap: 1.2rem;
+    }
+    @include response(tab-port) {
+      height: 8rem;
+      padding: 1.5rem;
+      gap: 1rem;
+    }
+    @include response(mobile) {
+      height: 7rem;
+      padding: 1rem;
+      gap: 0.8rem;
+    }
 
     &__type {
       display: flex;
@@ -150,6 +413,52 @@
       & h2 {
         font-size: 1.8rem;
       }
+
+      @include response(big-desktop) {
+        gap: 1rem;
+        & p {
+          font-size: 1.6rem;
+        }
+        & h2 {
+          font-size: 2.2rem;
+        }
+      }
+      @include response(desktop) {
+        gap: 0.8rem;
+        & p {
+          font-size: 1.4rem;
+        }
+        & h2 {
+          font-size: 1.8rem;
+        }
+      }
+      @include response(tab-land) {
+        gap: 0.6rem;
+        & p {
+          font-size: 1.3rem;
+        }
+        & h2 {
+          font-size: 1.6rem;
+        }
+      }
+      @include response(tab-port) {
+        gap: 0.5rem;
+        & p {
+          font-size: 1.2rem;
+        }
+        & h2 {
+          font-size: 1.4rem;
+        }
+      }
+      @include response(mobile) {
+        gap: 0.4rem;
+        & p {
+          font-size: 1rem;
+        }
+        & h2 {
+          font-size: 1.2rem;
+        }
+      }
     }
   }
 }
@@ -160,14 +469,37 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    // gap: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
+    @include response(big-desktop) {
+      // margin-bottom: 2rem;
+    }
     & a {
       font-size: 1.4rem;
       font-weight: 500 !important;
       text-decoration: none;
       color: $color-orange;
       margin-right: 2rem;
+
+      @include response(big-desktop) {
+        font-size: 1.6rem;
+        margin-right: 3rem;
+      }
+      @include response(desktop) {
+        font-size: 1.5rem;
+        margin-right: 2.5rem;
+      }
+      @include response(tab-land) {
+        font-size: 1.4rem;
+        margin-right: 2rem;
+      }
+      @include response(tab-port) {
+        font-size: 1.3rem;
+        margin-right: 1.5rem;
+      }
+      @include response(mobile) {
+        font-size: 1.2rem;
+        margin-right: 1rem;
+      }
     }
   }
 
@@ -176,11 +508,39 @@
     grid-template-columns: repeat(2, minmax(17rem, min-content));
     grid-template-rows: repeat(2, 1fr);
     grid-gap: 2rem;
+
+    @include response(big-desktop) {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+    }
+
+    // &--1{
+    //   @include response(big-desktop){
+    //     grid-column: 1 / 2;
+    //     grid-row: 1 / 2;
+    //   }
+    // }
   }
 }
 
 .task {
-  //   width: 15rem;
+  width: 15rem;
+
+  @include response(big-desktop) {
+    width: 25rem;
+  }
+  @include response(desktop) {
+    width: 20rem;
+  }
+  @include response(tab-land) {
+    width: 18rem;
+  }
+  @include response(tab-port) {
+    width: 16rem;
+  }
+  @include response(mobile) {
+    width: 14rem;
+  }
 
   & h3 {
     font-weight: 500 !important;
@@ -194,6 +554,31 @@
   border-radius: 1rem;
   position: relative;
   box-shadow: 0rem 0.5rem 1rem 0.5rem #76767621;
+
+  @include response(big-desktop) {
+    height: 20rem;
+    padding: 4rem 2.5rem;
+  }
+  @include response(desktop) {
+    height: 16rem;
+    padding: 3.5rem 2.2rem;
+  }
+  @include response(tab-land) {
+    height: 14rem;
+    padding: 3rem 2rem;
+  }
+  @include response(tab-port) {
+    height: 12rem;
+    padding: 2.5rem 1.8rem;
+  }
+  @include response(mobile) {
+    height: 10rem;
+    padding: 2rem 1.5rem;
+  }
+  & h3 {
+    font-size: 2.2rem !important;
+    width: 80%;
+  }
 
   & span {
     position: absolute;
@@ -209,6 +594,42 @@
       width: 1rem;
       color: #ff3b3b;
     }
+
+    @include response(big-desktop) {
+      font-size: 1.5rem;
+      & ion-icon {
+        height: 1.4rem;
+        width: 1.4rem;
+      }
+    }
+    @include response(desktop) {
+      font-size: 1.4rem;
+      & ion-icon {
+        height: 1.2rem;
+        width: 1.2rem;
+      }
+    }
+    @include response(tab-land) {
+      font-size: 1.3rem;
+      & ion-icon {
+        height: 1.1rem;
+        width: 1.1rem;
+      }
+    }
+    @include response(tab-port) {
+      font-size: 1.2rem;
+      & ion-icon {
+        height: 1rem;
+        width: 1rem;
+      }
+    }
+    @include response(mobile) {
+      font-size: 1rem;
+      & ion-icon {
+        height: 0.9rem;
+        width: 0.9rem;
+      }
+    }
   }
   & span input[name="checkbox"] {
     appearance: none;
@@ -223,6 +644,27 @@
       color: $color-light;
       background-color: $color-pink-dark;
     }
+
+    @include response(big-desktop) {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+    @include response(desktop) {
+      width: 1.4rem;
+      height: 1.4rem;
+    }
+    @include response(tab-land) {
+      width: 1.3rem;
+      height: 1.3rem;
+    }
+    @include response(tab-port) {
+      width: 1.2rem;
+      height: 1.2rem;
+    }
+    @include response(mobile) {
+      width: 1rem;
+      height: 1rem;
+    }
   }
 
   &--2 {
@@ -230,8 +672,6 @@
 
     & span {
       & ion-icon {
-        height: 1rem;
-        width: 1rem;
         color: #ff3b3b;
       }
     }
@@ -242,8 +682,6 @@
 
     & span {
       & ion-icon {
-        height: 1rem;
-        width: 1rem;
         color: rgb(51, 236, 180);
       }
     }
@@ -259,8 +697,6 @@
 
     & span {
       & ion-icon {
-        height: 1rem;
-        width: 1rem;
         color: $color-light;
       }
     }
@@ -278,5 +714,21 @@
     position: absolute;
     bottom: 1rem;
     right: 1.5rem;
+
+    @include response(big-desktop) {
+      font-size: 2.7rem;
+      bottom: 1.5rem;
+      right: 2rem;
+    }
+    @include response(tab-port) {
+      font-size: 1.8rem;
+      bottom: 0.8rem;
+      right: 1.2rem;
+    }
+    @include response(mobile) {
+      font-size: 1.5rem;
+      bottom: 0.6rem;
+      right: 0.9rem;
+    }
   }
 }
