--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -9,28 +9,40 @@
 html {
   font-size: 62.5%;
 
-  @include response(big-desktop) {
-    font-size: 65%;
-  }
-  @include response(tab-land) {
-    font-size: 60%;
-  }
-  @include response(tab-port) {
-    font-size: 57.5%;
-  }
+  // @include response(big-desktop) {
+  //   font-size: 65%;
+  // }
+  // @include response(desktop) {
+  //   font-size: 60%;
+  // }
+  // @include response(tab-land) {
+  //   font-size: 55%;
+  // }
+  // @include response(tab-port) {
+  //   font-size: 50%;
+  // }
   @include response(mobile) {
-    font-size: 55%;
-  } 
+    font-size: 100%;
+  }
 }
 
 body {
   font-family: sans-serif;
   display: grid;
-  grid-template-columns: minmax(15rem, max-content) minmax(1fr, min-content) minmax(
-      1fr,
-      min-content
-    );
+  grid-template-columns: minmax(15rem, max-content) minmax(1fr, min-content) minmax(1fr, min-content);
   height: 100vh;
+
+  @include response(mobile) {
+    grid-template-columns: 1fr;
+    grid-template-rows:  minmax(8rem, min-content) 1fr 1fr;
+  }
+
+  @include response(small-phone) {
+    grid-template-columns: 1fr;
+    grid-template-rows: minmax(8rem, min-content) 1fr 1fr;
+
+    // grid-row-gap: 3rem;
+  }
   // grid-template-rows: ;
 }
 
@@ -39,6 +51,18 @@ body {
 
   display: grid;
   grid-template-columns: minmax(7.5rem, max-content) 1fr;
+  
+  @include response(mobile) {
+    grid-template-columns: 1fr;
+    // display: none;
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+  }
+  @include response(small-phone) {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+  }
+
   // grid-template-rows: minmax(10rem, min-content) 1fr minmax(10rem, max-content);
   // grid-template-rows: 1fr auto;
 }
@@ -55,6 +79,15 @@ body {
 
 .section__main {
   grid-column: 2 / 3;
+
+  @include response(mobile) {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+  }
+  @include response(small-phone) {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+  }
 }
 
 .section__members {
@@ -64,4 +97,13 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
+
+  @include response(mobile) {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+  }
+  @include response(small-phone) {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+  }
 }
