--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -4,21 +4,26 @@
   line-height: 1.2;
   color: $color-dark-2;
 
-  @include response(big-desktop){
+  @include response(big-desktop) {
     font-size: 3rem;
   }
-  @include response(desktop){
+  @include response(desktop) {
     font-size: 2.8rem;
   }
-  @include response(tab-land){
-    font-size: 2.5rem;
+  // @include response(tab-land) {
+  //   font-size: 2.5rem;
+  // }
+  // @include response(tab-port) {
+  //   font-size: 2.3rem;
+  // }
+  // @include response(mobile) {
+  //   font-size: 2rem;
+  // }
+
+  @include response(small-phone){
+    font-size: 2.6rem;
   }
-  @include response(tab-port){
-    font-size: 2.3rem;
-  }
-  @include response(mobile){
-    font-size: 2rem;
-  }
+
   // margin-bottom: 1.6rem;
 }
 
@@ -28,20 +33,24 @@
   line-height: 1.3;
   color: $color-dark-2;
 
-  @include response(big-desktop){
-    font-size: 2.8rem;
+  @include response(big-desktop) {
+    font-size: 2.4rem;
   }
-  @include response(desktop){
+  @include response(desktop) {
     font-size: 2.5rem;
   }
-  @include response(tab-land){
-    font-size: 2.2rem;
-  }
-  @include response(tab-port){
-    font-size: 2rem;
-  }
-  @include response(mobile){
-    font-size: 1.8rem;
+  // @include response(tab-land) {
+  //   font-size: 2.2rem;
+  // }
+  // @include response(tab-port) {
+  //   font-size: 2rem;
+  // }
+  // @include response(mobile) {
+  //   font-size: 1.8rem;
+  // }
+
+  @include response(small-phone){
+    font-size: 2.5rem;
   }
   // margin-bottom: 1.4rem;
 }
@@ -51,21 +60,26 @@
   font-weight: 600;
   line-height: 1.4;
 
-  @include response(big-desktop){
+  @include response(big-desktop) {
     font-size: 2.2rem;
   }
-  @include response(desktop){
-    font-size: 1.9rem;
+  @include response(desktop) {
+    font-size: 1.6rem;
   }
-  @include response(tab-land){
-    font-size: 1.7rem;
+  // @include response(tab-land) {
+  //   font-size: 1.4rem;
+  // }
+  // @include response(tab-port) {
+  //   font-size: 1.2rem;
+  // }
+  // @include response(mobile) {
+  //   font-size: 1rem;
+  // }
+
+  @include response(small-phone){
+    font-size: 1.8rem;
   }
-  @include response(tab-port){
-    font-size: 1.5rem;
-  }
-  @include response(mobile){
-    font-size: 1.3rem;
-  }
+  // margin-bottom: 1.4rem;
 }
 
 .heading--3 {
@@ -73,21 +87,25 @@
   font-weight: 550;
   line-height: 1.4;
   color: $color-dark-3;
-  
-  @include response(big-desktop){
+
+  @include response(big-desktop) {
     font-size: 1.8rem;
   }
-  @include response(desktop){
+  @include response(desktop) {
     font-size: 1.5rem;
   }
-  @include response(tab-land){
-    font-size: 1.3rem;
-  }
-  @include response(tab-port){
-    font-size: 1.2rem;
-  }
-  @include response(mobile){
-    font-size: 1.1rem;
+  // @include response(tab-land) {
+  //   font-size: 1.3rem;
+  // }
+  // @include response(tab-port) {
+  //   font-size: 1.2rem;
+  // }
+  // @include response(mobile) {
+  //   font-size: 1.1rem;
+  // }
+
+  @include response(small-phone){
+    font-size: 1.4rem;
   }
   // margin-bottom: 1.2rem;
 }
@@ -98,22 +116,26 @@
   line-height: 1.4;
   color: $color-dark-2;
 
-  @include response(big-desktop){
+  @include response(big-desktop) {
     font-size: 1.6rem;
   }
-  @include response(desktop){
+  @include response(desktop) {
     font-size: 1.4rem;
   }
-  @include response(tab-land){
+  // @include response(tab-land) {
+  //   font-size: 1.2rem;
+  // }
+  // @include response(tab-port) {
+  //   font-size: 1.1rem;
+  // }
+  // @include response(mobile) {
+  //   font-size: 0.9rem;
+  // }
+  // margin-bottom: 1.2rem;
+
+  @include response(small-phone){
     font-size: 1.2rem;
   }
-  @include response(tab-port){
-    font-size: 1.1rem;
-  }
-  @include response(mobile){
-    font-size: .9rem;
-  }
-  // margin-bottom: 1.2rem;
 }
 
 .sm--text {
@@ -122,7 +144,7 @@
   line-height: 1.5;
   color: $color-dark-4;
 
-  @include response(big-desktop){
+  @include response(big-desktop) {
     font-size: 1.5rem;
   }
 }
@@ -131,8 +153,8 @@
   font-size: 1rem;
   color: $color-dark-4;
   font-weight: 550;
-  
-  @include response(big-desktop){
+
+  @include response(big-desktop) {
     font-size: 1.4rem;
   }
 }
@@ -148,38 +170,42 @@
   background-color: #fff;
   padding: 1.3rem 1.6rem;
   align-self: self-start;
-  transition: all .3s;
+  transition: all 0.3s;
   cursor: pointer;
 
-  &:hover{
+  &:hover {
     background-color: $color-orange-light;
     color: #fff;
   }
 
-  @include response(big-desktop){
+  @include response(big-desktop) {
     width: 13rem;
     font-size: 1.25rem;
-
   }
-  @include response(desktop){
+  @include response(desktop) {
     width: 12rem;
     font-size: 1.1rem;
     padding: 1rem 1.4rem;
   }
-  @include response(tab-land){
+  @include response(tab-land) {
     width: 11rem;
     font-size: 1rem;
     padding: 0.8rem 1.2rem;
   }
-  @include response(tab-port){
+  @include response(tab-port) {
     width: 10rem;
     font-size: 1rem;
     padding: 0.7rem 1rem;
   }
-  @include response(mobile){
+  @include response(mobile) {
     width: 9rem;
     font-size: 1rem;
     padding: 0.6rem 0.8rem;
+  }
+  @include response(small-phone){
+    width: 9rem;
+    font-size: 1.3rem;
+    padding: 2rem 0.8rem;
   }
 }
 
@@ -199,36 +225,35 @@
   margin-right: auto;
   // transition: all .3s;
 
-  &:hover{
+  &:hover {
     background-color: $color-orange-light;
   }
 
-  @include response(big-desktop){
+  @include response(big-desktop) {
     height: 4.5rem;
     width: 15rem;
     font-size: 1.6rem;
   }
-  @include response(desktop){
+  @include response(desktop) {
     height: 4rem;
-    width: 14rem;
+    width: 13rem;
     font-size: 1.4rem;
   }
-  @include response(tab-land){
+  @include response(tab-land) {
     height: 3.5rem;
-    width: 13rem;
+    width: 11rem;
     font-size: 1.2rem;
   }
-  @include response(tab-port){
+  @include response(tab-port) {
     height: 3rem;
-    width: 12rem;
+    width: 11rem;
     font-size: 1.1rem;
   }
-  @include response(mobile){
-    height: 2.5rem;
-    width: 10rem;
-    font-size: 1rem;
+  @include response(small-mobile) {
+    height: 3rem;
+    width: 11rem;
+    font-size: 1.5rem;
   }
-
 }
 
 .heading__noti-item {
