--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -76,16 +76,8 @@
       width: 3.5rem;
     }
     @include response(tab-land) {
-      height: 3rem;
-      width: 3rem;
-    }
-    @include response(tab-port) {
-      height: 2.8rem;
-      width: 2.8rem;
-    }
-    @include response(mobile) {
-      height: 2.5rem;
-      width: 2.5rem;
+      height: 3.5rem;
+      width: 3.5rem;
     }
 
     &:first-child {
@@ -99,6 +91,22 @@
 
     &:not(:last-child) {
       margin-right: -2.8rem;
+
+      @include response(big-desktop) {
+        margin-right: -3.5rem;
+      }
+      @include response(desktop) {
+        margin-right: -3rem;
+      }
+      @include response(tab-land) {
+        margin-right: -2.5rem;
+      }
+      @include response(tab-port) {
+        margin-right: -2rem;
+      }
+      @include response(mobile) {
+        margin-right: -1.5rem;
+      }
     }
   }
 
@@ -112,13 +120,13 @@
       height: 2.1rem;
     }
     @include response(tab-land) {
-      height: 1.7rem;
+      height: 1.8rem;
     }
     @include response(tab-port) {
-      height: 1.7rem;
+      height: 1.8rem;
     }
     @include response(mobile) {
-      height: 1.4rem;
+      height: 1.6rem;
     }
   }
 
@@ -128,6 +136,23 @@
     flex-direction: column;
     gap: 1rem;
     height: calc(100% - 15rem);
+
+    @include response(big-desktop) {
+      height: calc(100% - 15rem);
+    }
+    @include response(desktop) {
+      height: calc(100% - 11rem);
+    }
+    @include response(tab-land) {
+      height: calc(100% - 9rem);
+    }
+    @include response(tab-port) {
+      height: calc(100% - 8rem);
+    }
+    @include response(mobile) {
+      height: calc(100% - 7rem);
+    }
+    
     // padding-bottom: auto;
   }
 
