--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -6,6 +6,10 @@
   display: flex;
   flex-direction: column;
 
+  .members__heading {
+    display: none;
+  }
+
   @include response(big-desktop) {
     padding: 0 4rem;
   }
@@ -14,6 +18,10 @@
   }
   @include response(tab-port) {
     padding: 0 1.5rem;
+
+    .members__heading {
+      display: block;
+    }
   }
   @include response(tab-land) {
     padding: 0 1rem;
@@ -157,20 +165,19 @@
         margin-bottom: 1.4rem;
       }
 
-      
       @include response(big-desktop) {
-        & > p{
-        font-size: 1.8rem;
+        & > p {
+          font-size: 1.8rem;
         }
         & > a {
-        text-decoration: none;
-        font-size: 1.3rem;
-        color: $color-orange;
+          text-decoration: none;
+          font-size: 1.3rem;
+          color: $color-orange;
           font-size: 1.6rem;
         }
       }
       @include response(tab-land) {
-        & > p{
+        & > p {
           font-size: 1.6rem;
         }
         & > a {
@@ -181,7 +188,7 @@
         }
       }
       @include response(tab-port) {
-        & > p{
+        & > p {
           font-size: 1.5rem;
         }
         & > a {
@@ -192,7 +199,7 @@
         }
       }
       @include response(mobile) {
-        & > p{
+        & > p {
           font-size: 1.4rem;
         }
         & > a {
@@ -202,9 +209,9 @@
           font-size: 1.2rem;
         }
       }
-    // display: flex;
-    // flex-direction: column;
-    // // height: ;
+      // display: flex;
+      // flex-direction: column;
+      // // height: ;
     }
   }
 
@@ -214,30 +221,58 @@
     justify-content: space-between;
     gap: 2rem;
     margin-bottom: 3rem;
-    // height: 50rem;
-
+  
     @include response(big-desktop) {
+      height: 40rem;
       padding: 0 2rem;
       gap: 3rem;
-
-      // height: min-content;
+      overflow-x: hidden;
+      overflow-y: auto;
+      scroll-behavior: smooth;
+      -webkit-overflow-scrolling: touch;
     }
+  
     @include response(desktop) {
+      // height: 50rem;
       padding: 0 1rem;
       gap: 2.5rem;
-      height: 50rem;
-    }
-    @include response(tab-land) {
-      padding: 0 .8rem;
+
       flex-direction: column;
-      overflow: scroll;
+      height: 30rem;
+      overflow-y: auto;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+
+      & > * {
+        flex: 0 0 auto;
+        height: 100%;
+      }
+  
+      &::-webkit-scrollbar {
+        width: 0.6rem;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: $color-dark-3;
+        border-radius: 10px;
+      }
+      scrollbar-width: thin;
+      scrollbar-color: $color-dark-3 transparent;
+    }
+  
+    @include response(tab-land) {
+      padding: 0 1rem;
       gap: 2rem;
     }
-    @include response(tab-port) {
-      padding: 0 .6rem;
-      gap: 1.5rem;
+  
+    @include response(desktop) {
+      
     }
-  }
+  
+    @include response(mobile) {
+      padding: 0 0.4rem;
+      gap: 1rem;
+    }
+  }  
 
   &__footer {
     padding: 0 1rem;
@@ -249,6 +284,7 @@
     @include response(big-desktop) {
       padding: 0 2rem;
       gap: 2rem;
+      margin-top: 1.8rem;
       & > p {
         font-size: 1.8rem;
       }
@@ -256,6 +292,7 @@
     @include response(tab-land) {
       padding: 0 1.5rem;
       gap: 1.5rem;
+      margin-top: 1.6rem;
       & > p {
         font-size: 1.6rem;
       }
@@ -263,6 +300,7 @@
     @include response(tab-port) {
       padding: 0 1.2rem;
       gap: 1.2rem;
+      margin-top: 1.4rem;
       & > p {
         font-size: 1.5rem;
       }
@@ -270,6 +308,7 @@
     @include response(mobile) {
       padding: 0 1rem;
       gap: 1rem;
+      margin-top: 1.2rem;
       & > p {
         font-size: 1.4rem;
       }
@@ -305,8 +344,20 @@
       gap: 10rem;
       justify-content: space-between;
 
-      & p {
-        // margin-right: 17rem;
+      @include response(big-desktop) {
+        gap: 14rem;
+      }
+      @include response(desktop) {
+        gap: 9rem;
+      }
+      @include response(tab-land) {
+        gap: 6rem;
+      }
+      @include response(tab-port) {
+        gap: 4rem;
+      }
+      @include response(mobile) {
+        gap: 3rem;
       }
     }
 
