--- a/sass/components/_members.scss
+++ b/sass/components/_members.scss
@@ -8,27 +8,32 @@
     padding: 0 6rem;
     // padding-left: 8rem;
   }
-  @include response(desktop){
+  @include response(desktop) {
     padding: 0 3rem;
     padding-left: 4rem;
   }
-  @include response(tab-land) {
-    padding: 0 1rem;
-    padding-left: 2rem;
-  }
-  @include response(tab-port) {
-    padding: 0 1rem;
-    padding-left: 2rem;
-  }
+
+  @include response(tab-port){
+    &__header{
+      display: none;
+    }
+  } 
+
   @include response(mobile) {
     padding: 0 1.5rem;
     padding-left: 2rem;
+
+    &__header{
+      display: none;
+    }
   }
-  
+  @include response(small-mobile) {
+    margin-top: 3rem;
+  }
+
   &__heading {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     // align-items: center;
     margin-bottom: 1rem;
 
@@ -46,6 +51,7 @@
     }
     @include response(mobile) {
       margin-bottom: 0.8rem;
+      justify-content: space-between;
     }
   }
 
@@ -72,8 +78,11 @@
       margin-top: 2rem;
     }
     @include response(mobile) {
-      gap: 0.8rem;
-      margin-top: 1.5rem;
+      gap: 2rem;
+      margin-top: 2.5rem;
+    }
+    @include response(small-mobile) {
+      
     }
   }
 
@@ -275,8 +284,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     gap: 1rem;
-    max-width: fit-content;
+    // max-width: min-content;
 
     @include response(big-desktop) {
       gap: 1.5rem;
@@ -316,9 +326,9 @@
       height: 4rem;
       margin-bottom: 1rem;
     }
-    @include response(mobile) {
-      width: 3.5rem;
-      height: 3.5rem;
+    @include response(small-mobile) {
+      width: 10.5rem;
+      height: 10.5rem;
       margin-bottom: 0.8rem;
     }
   }
@@ -386,6 +396,7 @@
       gap: 1.5rem;
     }
     @include response(tab-land) {
+      border-radius: 15px;
       height: 9rem;
       padding: 2rem;
       gap: 1.2rem;
@@ -396,6 +407,7 @@
       gap: 1rem;
     }
     @include response(mobile) {
+      border-radius: 10px;
       height: 7rem;
       padding: 1rem;
       gap: 0.8rem;
@@ -471,7 +483,7 @@
     justify-content: space-between;
     margin-bottom: 1.5rem;
     @include response(big-desktop) {
-      // margin-bottom: 2rem;
+      margin-bottom: 2rem;
     }
     & a {
       font-size: 1.4rem;
@@ -513,6 +525,42 @@
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 1fr);
     }
+    @include response(desktop) {
+      grid-gap: 1.5rem;
+    }
+    @include response(tab-land) {
+      grid-gap: 1.3rem;
+    }
+    @include response(tab-port) {
+      grid-gap: 1.2rem;
+    }
+    @include response(mobile) {
+      grid-gap: 1rem;
+    }
+    @include response(small-phone) {
+    justify-self: stretch;
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: auto;
+
+      height: 25rem;
+      overflow-y: auto;
+      overflow-x: hidden;
+      scroll-behavior: smooth;
+      -webkit-overflow-scrolling: touch;
+
+      // Optional custom scrollbar
+      &::-webkit-scrollbar {
+        width: 0.5rem;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background-color: $color-dark-4;
+        border-radius: 10px;
+      }
+
+      scrollbar-width: thin;
+      scrollbar-color: $color-dark-4 transparent;
+    }
 
     // &--1{
     //   @include response(big-desktop){
@@ -524,27 +572,13 @@
 }
 
 .task {
-  width: 15rem;
+  width: 100% !important;
+  max-width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
-  @include response(big-desktop) {
-    width: 25rem;
-  }
-  @include response(desktop) {
-    width: 20rem;
-  }
-  @include response(tab-land) {
-    width: 18rem;
-  }
-  @include response(tab-port) {
-    width: 16rem;
-  }
-  @include response(mobile) {
-    width: 14rem;
-  }
-
-  & h3 {
-    font-weight: 500 !important;
-  }
   height: 13rem;
   font-size: 1.8rem !important;
   font-weight: 400 !important;
@@ -565,19 +599,15 @@
   }
   @include response(tab-land) {
     height: 14rem;
-    padding: 3rem 2rem;
+    padding: 3.5rem 2rem;
   }
   @include response(tab-port) {
     height: 12rem;
-    padding: 2.5rem 1.8rem;
+    padding: 3.5rem 1.8rem;
   }
   @include response(mobile) {
     height: 10rem;
-    padding: 2rem 1.5rem;
-  }
-  & h3 {
-    font-size: 2.2rem !important;
-    width: 80%;
+    padding: 3rem 1.5rem;
   }
 
   & span {
