--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -2,7 +2,7 @@
   &__left {
     grid-column: 1 / 2;
     display: grid;
-    grid-template-columns: minmax(7rem, 1fr);
+    grid-template-columns: minmax(7rem);
     grid-template-rows: minmax(8rem, min-content) 1fr minmax(8rem, min-content);
     justify-items: stretch;
     align-items: center;
@@ -11,7 +11,26 @@
     background-color: $color-light;
 
     @include response(big-desktop){
-    grid-template-columns: minmax(9rem, 1fr);
+    grid-template-columns: minmax(9rem);
+    }
+    @include response(desktop){
+      grid-template-columns: minmax(8rem);
+    }
+    @include response(tab-land){
+      grid-template-columns: minmax(7rem);
+    }
+    @include response(tab-port){
+      grid-template-columns: minmax(1fr);
+    }
+
+    @include response(mobile){
+      grid-template-columns: 5rem 1fr 5rem;
+      grid-template-rows: 8rem;
+    }
+
+    @include response(small-phone){
+      grid-template-columns: 5rem 1fr 5rem;
+      grid-template-rows: 8rem;
     }
 
     &__logos {
@@ -21,6 +40,24 @@
       justify-content: center;
       align-items: center;
       border-bottom: 1px solid $color-dark-5;
+    }
+
+    .logo__menu{
+      display: none;
+      height: 3.5rem;
+      width: 3.5rem;
+      position: relative;
+      color: $color-dark;
+      .menu__icon{
+        height: 3.5rem;
+        width: 3.5rem;
+      }
+      @include response(mobile){
+        display: block;
+        position: fixed;
+        right: 5rem;
+        top: 2.2rem;
+      }
     }
 
     &__logo {
@@ -46,6 +83,25 @@
       flex-direction: column;
       align-items: center;
       // gap: 1.8rem;
+
+      @include response(mobile){
+        grid-column: 2 / 3;
+        flex-direction: row;
+        grid-row: 1 / 2;
+        max-width: 0;
+        display: none;
+        visibility: hidden;
+        transition: all 0.3s ease-in-out;
+        // max-height: 0;S
+      }
+
+      @include response(small-phone){
+        grid-column: 2 / 3;
+        flex-direction: row;
+        grid-row: 1 / 2;
+
+      }
+      
     }
 
     &__item {
@@ -80,6 +136,12 @@
         height: 3rem;
         width: 3rem;
       }
+
+      @include response(mobile){
+        padding: 1.7rem ;
+        height: 2.3rem;
+        width: 2.3rem;
+      }
     }
 
     &__doubt {
@@ -106,6 +168,11 @@
         width: 4.5rem;
         font-size: 2rem !important;
       }
+
+      @include response(mobile){
+        grid-column: 3 / 4;
+        grid-row: 1 / 2;
+      }
     }
   }
 
@@ -115,7 +182,48 @@
     grid-template-columns: minmax(15rem, max-content);
     grid-template-rows: minmax(8rem, min-content) 1fr minmax(5rem, min-content);
     width: 100%;
-    background-color: $color-bg;
+    transition: all 0.4s ease-in-out;
+
+    @include response(tab-land) {
+      display: none;
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 100%;
+      max-width: 30rem;
+      height: 100%;
+      background-color: $color-cream;
+      z-index: 1000;
+      transform: translateX(100%);
+      transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      overflow-y: auto;
+      &:target {
+        background-color: $color-cream;
+        display: grid;
+        transform: translateX(0); // Slide in
+        transition: transform 0.3s  cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 3rem;
+      }
+    }
+
+    .sidebar__close-btn {
+      display: none;
+      position: absolute;
+      top: 1rem;
+      right: -8rem;
+      color: $color-dark-4;
+      background: none;
+      height: 12rem;
+      width: 12rem;
+      border: none;
+      font-size: 2rem;
+      cursor: pointer;
+      z-index: 1001;
+  
+      @include response(tab-land) {
+        display: block;
+      }
+    }
 
     &__header {
       grid-column: 1 / 2;
@@ -127,10 +235,17 @@
       padding: 0 2.5rem;
 
       @include response(big-desktop) {
-        padding: 2.5rem 2.5rem;
+        padding: 0 2.5rem;
+      }
+      @include response(desktop) {
+        padding: 2rem;
+      }
+      @include response(tab-port) {
+        padding: 0 1.5rem;
       }
       @include response(tab-land) {
-        padding: 1.5rem 2.5rem;
+        padding: 0 1rem;
+        
       }
     }
   }
@@ -146,6 +261,19 @@
     gap: 1.5rem;
     // width: 100%;
     margin: 1.5rem 2.5rem;
+
+    @include response(big-desktop) {
+      margin: 1.5rem 2.5rem;
+    }
+    @include response(desktop) {
+      margin: 1.5rem 2rem;
+    }
+    @include response(tab-port) {
+      margin: 1.5rem 1.5rem;
+    }
+    @include response(tab-land) {
+      margin: 1.5rem 1rem;
+    }
   }
 
   &__menu {
@@ -158,6 +286,22 @@
     .toggle__input--5 {
       display: none;
       margin-bottom: 1.5rem;
+
+      @include response(big-desktop) {
+        margin-bottom: 2rem;
+      }
+      @include response(desktop) {
+        margin-bottom: 1.6rem;
+      }
+      @include response(tab-land) {
+        margin-bottom: 1.4rem;
+      }
+      @include response(tab-port) {
+        margin-bottom: 1.2rem;
+      }
+      @include response(mobile) {
+        margin-bottom: 1rem;
+      }
     }
 
     .toggle__label--1,
@@ -197,6 +341,22 @@
     visibility: hidden;
     overflow: hidden;
     transition: all 0.4s ease;
+
+    @include response(big-desktop) {
+      gap: 1.5rem; 
+    }
+    @include response(desktop) {
+      gap: 1.2rem; 
+    }
+    @include response(tab-land) {
+      gap: 1rem; 
+    }
+    @include response(tab-port) {
+      gap: 0.8rem; 
+    }
+    @include response(mobile) {
+      gap: 0.6rem; 
+    }
   }
 
   &__inner__menu {
@@ -219,4 +379,96 @@
   max-height: 500px;
   visibility: visible;
   margin-top: 1rem;
+}
+
+// MAIN menu
+.menu__input{
+  display: none;
+}
+
+.menu__input:checked + .menu__icon + .sidebar__left__items{
+  visibility: visible;
+  width: 100%;
+  max-width: 100%;
+}
+
+
+// **********************************
+.sidebar__toggle {
+  display: none;
+
+  // Show right sidebar when checked
+  &:checked ~ .section__sidebar .sidebar__right {
+    display: grid;
+    z-index: 999;
+  }
+}
+
+.sidebar__right {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+
+  &__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+
+  &__header {
+    background-color: $color-cream;
+    width: 100%;
+    max-width: 25rem;
+    height: 100%;
+    position: relative;
+    z-index: 1000;
+    padding: 1rem;
+    animation: slideIn  0.3s ease;
+  }
+}
+
+.sidebar__menus-bar{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  background-color: $color-cream;
+    width: 100%;
+    max-width: 25rem;
+    height: 100%;
+    position: relative;
+    z-index: 1000;
+    padding: 0rem;
+    animation: slideIn  0.3s ease;
+}
+
+@keyframes slideIn {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideOut {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@include response(tab-land) {
+  .sidebar__right {
+    display: none; // only show via toggle
+  }
 }
