--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,13 @@ ORDER: Base + typography > general layout + grid > page layout > components
     padding-left: 4rem;
   }
 }
-@media screen and (max-width: 56.25em) {
-  .members__header {
-    display: none;
-  }
-}
 @media screen and (max-width: 40.625em) {
   .members {
     padding: 0 1.5rem;
     padding-left: 2rem;
+  }
+  .members__header {
+    display: none;
   }
   .members__header {
     display: none;
@@ -1119,13 +1117,18 @@ ORDER: Base + typography > general layout + grid > page layout > components
   .main {
     padding: 0 1.5rem;
   }
-  .main .members__heading {
-    display: block;
-  }
 }
 @media screen and (max-width: 75em) {
   .main {
     padding: 0 1rem;
+  }
+}
+@media screen and (max-width: 40.625em) {
+  .main {
+    padding: 0 0.5rem;
+  }
+  .main .members__heading {
+    display: block;
   }
 }
 .main__search {
@@ -2083,6 +2086,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
   grid-template-rows: minmax(8rem, min-content) 1fr minmax(5rem, min-content);
   width: 100%;
   transition: all 0.4s ease-in-out;
+  background-color: #f2ece2;
 }
 @media screen and (max-width: 75em) {
   .sidebar__right {
@@ -2318,73 +2322,76 @@ ORDER: Base + typography > general layout + grid > page layout > components
   max-width: 100%;
 }
 
-.sidebar__toggle {
-  display: none;
-}
-.sidebar__toggle:checked ~ .section__sidebar .sidebar__right {
-  display: grid;
-  z-index: 999;
-}
-
-.sidebar__right {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-.sidebar__right__overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-}
-.sidebar__right__header {
-  background-color: #fce6bd;
-  width: 100%;
-  max-width: 25rem;
-  height: 100%;
-  position: relative;
-  z-index: 1000;
-  padding: 1rem;
-  animation: slideIn 0.3s ease;
-}
-
-.sidebar__menus-bar {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  background-color: #fce6bd;
-  width: 100%;
-  max-width: 25rem;
-  height: 100%;
-  position: relative;
-  z-index: 1000;
-  padding: 0rem;
-  animation: slideIn 0.3s ease;
-}
-
-@keyframes slideIn {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0);
+@media screen and (max-width: 75em) {
+  .sidebar__toggle {
+    display: none;
   }
 }
-@keyframes slideOut {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
+@media screen and (max-width: 75em) and (max-width: 75em) {
+  .sidebar__toggle:checked ~ .section__sidebar .sidebar__right {
+    display: grid;
+    z-index: 999;
   }
 }
 @media screen and (max-width: 75em) {
+  .sidebar__right {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .sidebar__right__overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+  .sidebar__right__header {
+    background-color: #fce6bd;
+    width: 100%;
+    max-width: 25rem;
+    height: 100%;
+    position: relative;
+    z-index: 1000;
+    padding: 1rem;
+    animation: slideIn 0.3s ease;
+  }
+  .sidebar__menus-bar {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: #fce6bd;
+    width: 100%;
+    max-width: 25rem;
+    height: 100%;
+    position: relative;
+    z-index: 1000;
+    padding: 0rem;
+    animation: slideIn 0.3s ease;
+  }
+  @keyframes slideIn {
+    from {
+      transform: translateX(-100%);
+    }
+    to {
+      transform: translateX(0);
+    }
+  }
+  @keyframes slideOut {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
+  }
+}
+@media screen and (max-width: 75em) and (max-width: 75em) {
   .sidebar__right {
     display: none;
   }
@@ -2445,6 +2452,8 @@ body {
 }
 
 .clock__img {
+  display: flex;
+  justify-self: center;
   margin: 1.8rem;
   height: 2.5rem;
   width: 2.5rem;
