--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -195,6 +195,7 @@
     grid-template-rows: minmax(8rem, min-content) 1fr minmax(5rem, min-content);
     width: 100%;
     transition: all 0.4s ease-in-out;
+    background-color: $color-bg;
 
     @include response(tab-land) {
       display: none;
@@ -406,52 +407,57 @@
 
 
 // **********************************
-.sidebar__toggle {
-  display: none;
 
-  // Show right sidebar when checked
-  &:checked ~ .section__sidebar .sidebar__right {
-    display: grid;
-    z-index: 999;
+@include response(tab-land) {
+  .sidebar__toggle {
+    display: none;
+  
+    // Show right sidebar when checked
+  
+    @include response(tab-land) {
+      &:checked ~ .section__sidebar .sidebar__right {
+        display: grid;
+        z-index: 999;
+      }
+    }
   }
-}
-
-.sidebar__right {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-
-  &__overlay {
-    position: absolute;
+  
+  .sidebar__right {
+    display: none;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.4);
+  
+    &__overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+    }
+  
+    &__header {
+      background-color: $color-cream;
+      width: 100%;
+      max-width: 25rem;
+      height: 100%;
+      position: relative;
+      z-index: 1000;
+      padding: 1rem;
+      animation: slideIn  0.3s ease;
+    }
   }
-
-  &__header {
+  
+  .sidebar__menus-bar{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  
     background-color: $color-cream;
-    width: 100%;
-    max-width: 25rem;
-    height: 100%;
-    position: relative;
-    z-index: 1000;
-    padding: 1rem;
-    animation: slideIn  0.3s ease;
-  }
-}
-
-.sidebar__menus-bar{
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-
-  background-color: $color-cream;
     width: 100%;
     max-width: 25rem;
     height: 100%;
@@ -459,28 +465,29 @@
     z-index: 1000;
     padding: 0rem;
     animation: slideIn  0.3s ease;
-}
-
-@keyframes slideIn {
-  from {
-    transform: translateX(-100%);
   }
-  to {
-    transform: translateX(0);
+  
+  @keyframes slideIn {
+    from {
+      transform: translateX(-100%);
+    }
+    to {
+      transform: translateX(0);
+    }
   }
-}
-
-@keyframes slideOut {
-  from {
-    transform: translateX(0);
+  
+  @keyframes slideOut {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-100%);
+    }
   }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-@include response(tab-land) {
-  .sidebar__right {
-    display: none; // only show via toggle
+  
+  @include response(tab-land) {
+    .sidebar__right {
+      display: none; // only show via toggle
+    }
   }
 }
